# moyu

./: .clang-format  .env  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
downloader/: CMakeLists.txt
downloader/src/: main.cpp
downloader/src/views/: downloader.cpp  downloader.ui
main/: CMakeLists.txt
main/src/: main.cpp
main/src/views/: main.ui
manager/: CMakeLists.txt
manager/src/: main.cpp
manager/src/views/: manager.cpp  manager.ui
moyu/: CMakeLists.txt
moyu/src/: main.cpp
moyu/src/views/: moyu.cpp  moyu.h  moyu.ui
player/: CMakeLists.txt
player/src/: main.cpp
player/src/views/: player.h  player.ui
src/: main.cpp
src/assets/json/: feeds.json
src/assets/style/dark/: dark.sass  variables.sass
src/assets/style/dark/components/: novel.sass
src/assets/style/dark/views/: main.sass
src/common/: common.h
src/utils/: utils.cpp  utils.h
src/utils/networkManager/: networkManager.h
src/utils/videoUtils/: videoUtils.cpp  videoUtils.h
src/view/downloader/: downloader.cpp  downloader.h
src/view/main/: main.cpp  main.h  main.ui
src/view/manager/: manager.cpp  manager.h  manager.ui
src/view/player/: player.cpp  player.h  player.ui
